--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "pg": "^8.11.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.21-dev.e7649d2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
